<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/alert_add_server_server_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_server_info"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    <TextView
            android:text="@string/alert_add_server_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_margin="5dp"/>

    <EditText
            android:id="@+id/text_add_server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:layout_margin="5dp"
            android:hint="@string/alert_add_server_ip_server"
            android:maxLength="32"/>

</LinearLayout>