<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.EvidenceDetailActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_send"
                    android:id="@+id/button_send_evidence"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

            <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_delete"
                    android:id="@+id/button_remove_evidence"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

        </LinearLayout>

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">

                <TextView
                        android:text="@string/text_view_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_id"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">

                <TextView
                        android:text="@string/text_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_name"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <TextView
                        android:text="@string/text_view_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_type"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <TextView
                        android:text="@string/text_view_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_priority"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <TextView
                        android:text="@string/text_view_severity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_severity"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <TextView
                        android:text="@string/text_view_metadata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_metadata"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content">
                <TextView
                        android:text="@string/text_view_states"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"/>

                <TextView
                        android:text="@string/text_view_states_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_view_states_loading"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_margin="5dp"/>
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </LinearLayout>

</FrameLayout>