<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">


    <ImageView
            android:id="@+id/imageFingerprint"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_fingerprint_black_24dp"
            android:adjustViewBounds="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_no_access"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.26999998"/>

    <TextView
            android:id="@+id/text_reason_not_access"
            android:text="@string/login_unlock_device"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_no_access"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/text_no_access"
            android:text="@string/login_no_access"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageFingerprint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.455" android:textAlignment="center" android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_try_again"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.098" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_reason_not_access" android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>